fixed alignment of filters with results

--- a/src/app/components/search-results/search-results.styles.scss
+++ b/src/app/components/search-results/search-results.styles.scss
@@ -157,6 +157,8 @@ h3 {
 
 #search-filter-boxes {
   
+  padding-top: 5px;
+
   .filter-box {
     margin: 2rem auto;
   }
